evals/scenarios/investigation-004-image-pull-backoff.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-app
  namespace: hr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-app
  template:
    metadata:
      labels:
        app: hr-app
    spec:
      containers:
        - name: hr-app
          image: do-not-exist-image:1.0.1
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
